fix scroll bar on mobile

--- a/src/toc.scss
+++ b/src/toc.scss
@@ -13,6 +13,7 @@
     .toc-sticky-container__inner {
         margin: 0 auto;
         max-width: 100%;
+        overflow: hidden;
     }
 
     .toc-summary {
